# Federated-Health-Anomaly-Detection

./: LICENSE.txt  README.md  pyproject.toml
App/: client_app.py  server_app.py  task.py
Generated Artifacts/: final_model_fedprox.pkl
Note Book/: Figure_1.ipynb  Figure_3.ipynb  MAIN_V8_Table2_Figure_2_Table_3.ipynb  Table_1.ipynb
Source Data/: LICENSE-DATA.txt  health.csv
Src/: figure_1.py  figure_3.py  main_v8_table2_figure2_table3.py  table_1.py
