[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-health-anomaly-detection"
version = "1.0.0"
description = "A Federated Learning Framework for Anomaly Detection on Heterogeneous Health Insurance Claims"
license = "MIT"
dependencies = [
    "flwr[simulation]>=1.8.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "shap>=0.44.0",
    "matplotlib>=3.7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["App"]

# The following sections configure the `flwr run` command
[tool.flwr.app]
publisher = "zahravalidi"

[tool.flwr.app.components]
serverapp = "App.server_app:app"
clientapp = "App.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20

[tool.flwr.federations]
default = "local-simulation"

# This configures the simulation to launch 91 clients, matching your dataset
[tool.flwr.federations.local-simulation]
options.num-supernodes = 91